Bug Fixed shown in console

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,7 @@
 /* @import url(https://fonts.googleapis.com/css?family=Share+Tech+Mono); */
 
 body{
-  background: fixed url('http://cdn.backgroundhost.com/backgrounds/subtlepatterns/bright_squares.png');
+  /* background: fixed url('http://cdn.backgroundhost.com/backgrounds/subtlepatterns/bright_squares.png'); */
   position:relative;
 }
 
@@ -130,9 +130,9 @@ footer{
 	font-size:1.5em;
 }
 
-.dark-bg {
+/* .dark-bg {
   background: fixed url('http://cdn.backgroundhost.com/backgrounds/subtlepatterns/random_grey_variations.png' );  
-}
+} */
 footer a{
 	color:rgb(60, 70, 64);
 }
