--- a/assets/style.css
+++ b/assets/style.css
@@ -133,6 +133,9 @@ footer{
 /* .dark-bg {
   background: fixed url('http://cdn.backgroundhost.com/backgrounds/subtlepatterns/random_grey_variations.png' );  
 } */
+.dark-bg {
+  background: fixed url("./images/random_grey_variations.png")
+}
 footer a{
 	color:rgb(60, 70, 64);
 }
