--- a/assets/style.css
+++ b/assets/style.css
@@ -2,6 +2,7 @@
 
 body{
   /* background: fixed url('http://cdn.backgroundhost.com/backgrounds/subtlepatterns/bright_squares.png'); */
+  background: fixed url("../images/random-grey-variations.png");
   position:relative;
 }
 
